--- a/src/main/resources/templates/forgotPasswordEmail.html
+++ b/src/main/resources/templates/forgotPasswordEmail.html
@@ -1,5 +1,53 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<!--    <title>Forgot Password Email</title>-->
+<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>-->
+<!--    <link rel="stylesheet" href="style.css">-->
+<!--</head>-->
+<!--<body>-->
+<!--<main class="reset">-->
+<!--    &lt;!&ndash; Header section of the page &ndash;&gt;-->
+<!--    <header>-->
+<!--        <div><img src="./Amalitech logo.png" alt=""></div>-->
+<!--    </header>-->
+
+<!--    &lt;!&ndash; Main content for the page &ndash;&gt;-->
+<!--    <section>-->
+<!--        <p>Subject: Password Reset for AmaliTech Training System</p>-->
+<!--        <p>Dear [Recipient Name],</p>-->
+<!--        <p>To reset your password, click this secure link: [password reset link]</p>-->
+<!--        <p>Complete the process to set a new password. Ignore if you didn't request this.</p>-->
+<!--        <p>For support, reach us at:<br>-->
+<!--            Email: <a href="mailto:support@amalitech.com">support@amalitech.com</a><br>-->
+<!--            Phone: +1 (123) 456-7890</p>-->
+<!--        <p>Thank you for joining us in upholding academic excellence.</p>-->
+<!--        <p>Best regards,<br>AmaliTech team</p>-->
+<!--        <p>This email was sent to [Recipient Email]. If you'd rather not receive this kind of email, you can <a href="#">unsubscribe</a> or <a href="#">manage your email preferences</a>.</p>-->
+<!--        <p>&#169 2023 Plagicheck, AmaliTech</p>-->
+
+<!--    </section>-->
+
+<!--    &lt;!&ndash; Footer section of the page &ndash;&gt;-->
+<!--    <footer class="footer">-->
+<!--        <div class="foot-logo">-->
+<!--            <img src="./Amalitech logo.png" alt="">-->
+<!--        </div>-->
+<!--        <div class="icons">-->
+<!--            <a href="#"><img src="./icon-facebook.svg" alt=""></a>-->
+<!--            <a href="#"><img src="./icon-twitter.svg" alt=""></a>-->
+<!--            <a href="#"><img src="./icon-instagram.svg" alt=""></a>-->
+<!--        </div>-->
+<!--    </footer>-->
+<!--</main>-->
+<!--</body>-->
+<!--</html>-->
+
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,21 +59,21 @@
 <main class="reset">
     <!-- Header section of the page -->
     <header>
-        <div><img src="./Amalitech logo.png" alt=""></div>
+        <div><img src="Amalitech logo.png" alt=""></div>
     </header>
 
     <!-- Main content for the page -->
     <section>
         <p>Subject: Password Reset for AmaliTech Training System</p>
-        <p>Dear [Recipient Name],</p>
-        <p>To reset your password, click this secure link: [password reset link]</p>
+        <p>Dear [[${recipientName}]],</p>
+        <p>To reset your password, click this secure link: <a href="[[${resetLink}]]">Reset Password</a></p>
         <p>Complete the process to set a new password. Ignore if you didn't request this.</p>
         <p>For support, reach us at:<br>
             Email: <a href="mailto:support@amalitech.com">support@amalitech.com</a><br>
             Phone: +1 (123) 456-7890</p>
         <p>Thank you for joining us in upholding academic excellence.</p>
         <p>Best regards,<br>AmaliTech team</p>
-        <p>This email was sent to [Recipient Email]. If you'd rather not receive this kind of email, you can <a href="#">unsubscribe</a> or <a href="#">manage your email preferences</a>.</p>
+        <p>This email was sent to [[${recipientEmail}]]. If you'd rather not receive this kind of email, you can <a href="#">unsubscribe</a> or <a href="#">manage your email preferences</a>.</p>
         <p>&#169 2023 Plagicheck, AmaliTech</p>
 
     </section>
@@ -33,12 +81,12 @@
     <!-- Footer section of the page -->
     <footer class="footer">
         <div class="foot-logo">
-            <img src="./Amalitech logo.png" alt="">
+            <img src="Amalitech logo.png" alt="">
         </div>
         <div class="icons">
-            <a href="#"><img src="./icon-facebook.svg" alt=""></a>
-            <a href="#"><img src="./icon-twitter.svg" alt=""></a>
-            <a href="#"><img src="./icon-instagram.svg" alt=""></a>
+            <a href="#"><img src="icon-facebook.svg" alt=""></a>
+            <a href="#"><img src="icon-twitter.svg" alt=""></a>
+            <a href="#"><img src="icon-instagram.svg" alt=""></a>
         </div>
     </footer>
 </main>
