--- a/src/main/resources/templates/forgotPasswordEmail.html
+++ b/src/main/resources/templates/forgotPasswordEmail.html
@@ -53,7 +53,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password Email</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
 <main class="reset">
@@ -84,9 +84,9 @@
             <img src="Amalitech logo.png" alt="">
         </div>
         <div class="icons">
-            <a href="#"><img src="icon-facebook.svg" alt=""></a>
-            <a href="#"><img src="icon-twitter.svg" alt=""></a>
-            <a href="#"><img src="icon-instagram.svg" alt=""></a>
+            <a href="#"><img src="../static/images/icon-facebook.svg" alt=""></a>
+            <a href="#"><img src="../static/images/icon-twitter.svg" alt=""></a>
+            <a href="#"><img src="../static/images/icon-instagram.svg" alt=""></a>
         </div>
     </footer>
 </main>
